--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.17.1",
     "pg": "^8.0.2",
     "sequelize": "^5.21.6",
+    "socket.io": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/dotenv-flow": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/lodash": "^4.14.149",
+    "@types/socket.io": "^2.1.10",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
