--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "SET NODE_ENV=test&& jest",
     "test:coverage": "SET NODE_ENV=test&& jest --coverage",
     "tsc": "tsc",
-    "start": "tsc && node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "serve:local": "SET NODE_ENV=local && ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "serve:development": "SET NODE_ENV=development && ts-node-dev --respawn ./src/index.ts",
     "serve:production": "SET NODE_ENV=production && ts-node-dev --respawn --transpileOnly --env=production ./src/index.ts",
     "eslint": "eslint ./src/**/* ./tests/**/*",
-    "eslint:fix": "eslint ./src/**/* ./tests/**/* --fix"
+    "eslint:fix": "eslint ./src/**/* ./tests/**/* --fix",
+    "heroku-prebuild": "npm run tsc"
   },
   "repository": {
     "type": "git",
