--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve:production": "SET NODE_ENV=production && ts-node-dev --respawn --env=production ./src/index.ts",
     "eslint": "eslint ./src/**/* ./tests/**/*",
     "eslint:fix": "eslint ./src/**/* ./tests/**/* --fix",
-    "heroku-prebuild": "npm run tsc"
+    "heroku-prebuild": "npm install && npm run tsc"
   },
   "repository": {
     "type": "git",
