--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "sequelize": "^5.21.6",
     "socket.io": "^2.3.0",
     "tsc": "^1.20150623.0",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.30",
@@ -69,7 +70,6 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "ts-jest": "^25.5.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
