--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "socket.io": "^2.3.0",
     "tsc": "^1.20150623.0",
     "validator": "^13.0.0",
-    "typescript": "^3.9.7"
-  },
-  "devDependencies": {
+    "typescript": "^3.9.7",
     "@types/bluebird": "^3.5.30",
     "@types/dotenv-flow": "^3.0.0",
+    "@types/validator": "^13.0.0",
+    "@types/socket.io": "^2.1.10"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/lodash": "^4.14.149",
-    "@types/socket.io": "^2.1.10",
-    "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
