--- a/package.json
+++ b/package.json
@@ -43,22 +43,21 @@
   "homepage": "https://github.com/mhmdtshref/spyfall-backend#readme",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "@types/bluebird": "~3.5.30",
+    "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.7",
     "@types/dotenv-flow": "^3.0.0",
     "@types/jest": "^25.2.2",
     "@types/socket.io": "^2.1.10",
-    "@types/validator": "~13.0.0",
-    "bluebird": "~3.7.2",
+    "@types/validator": "^13.0.0",
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.1.0",
     "express": "^4.17.1",
     "pg": "^8.0.2",
     "sequelize": "^5.21.6",
     "socket.io": "^2.3.0",
-    "tsc": "~1.20150623.0",
-    "typescript": "~3.9.7",
-    "validator": "~13.0.0"
+    "typescript": "^3.8.3",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
